:sparkles: feat: backup

--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "minhas-tarefas",
+    "name": "Minhas Tarefas",
     "slug": "minhas-tarefas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
@@ -18,10 +18,20 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 2,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "permissions": [
+        "INTERNET",
+        "READ_INTERNAL_STORAGE",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_INTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "WRITE_SETTINGS"
+      ],
+      "package": "com.ipsluan.minhastarefas"
     },
     "androidStatusBar": {
       "barStyle": "light-content",
